# WALL-E_Licenta

./: .gitignore
config/: nav2_params.yaml  slam.yaml
src/battery_system_plugin/: CMakeLists.txt  package.xml
src/battery_system_plugin/src/: diffdrive_battery_consumer.cc
src/carucior_asamblat/: CMakeLists.txt  package.xml
src/carucior_asamblat/config/: carucior.rviz  global_costmap.yaml  joint_names_carucior_asamblat.yaml  local_costmap.yaml  slam_toolbox_params.yaml
src/carucior_asamblat/launch/: bringup.launch.py  display.launch.py  gazebo.launch.py  mapping.launch.py  slam.launch.py  test_slam.launch.py
src/carucior_asamblat/meshes/: base_link.STL  camera.STL  ecran.STL  lidar.STL  roata_fata_dreapta.STL  roata_fata_stanga.STL  roata_spate_dreapta.STL  roata_spate_stanga.STL
src/carucior_asamblat/urdf/: carucior_asamblat.csv  carucior_asamblat.urdf
src/carucior_asamblat/worlds/: world.sdf
src/first_scan/: package.xml  setup.cfg  setup.py
src/first_scan/config/: explore_params.yaml  nav2_params.yaml
src/first_scan/first_scan/: pre_explore_rotate.py  save_and_exit.py
src/first_scan/launch/: first_scan.launch.py
src/human_follower/: README.md  package.xml  setup.py
src/human_follower/config/: params.yaml
src/human_follower/human_follower/: cmd_vel_inverter.py  delivery_manager.py  dr_spaam_detector_node.py  follower_node.py  map_explorer.py  map_uploader.py  person_keyboard.py  scan_map_filter.py  scan_qos_relay.py  uwb_pose_publisher.py  yolo_tracker_node.py
src/human_follower/launch/: delivery.launch.py  human_follower.launch.py
