<package format="2">
  <name>carucior_asamblat</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for carucior_asamblat</p>
    <p>This package contains configuration data, 3D models and launch files
for carucior_asamblat robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="todo@email.com">TODO</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent />
  </export>
</package>