<?xml version="1.0"?>
<package format="3">
  <name>first_scan</name>
  <version>0.1.0</version>
  <description>
    First-scan mapping orchestrator for carucior robot. Runs nav2 stack +
    explore_lite (frontier-based exploration) to autonomously map the
    environment, then saves the slam_toolbox posegraph and exits.
  </description>
  <maintainer email="daniel@example.com">daniel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <!-- Stack-ul nav2 si exploratorul -->
  <exec_depend>explore_lite</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
